# entry_level_excercise

./: README.md  cleanup_docker.sh  docker-compose.yml  run_docker.sh
data-entry/: Dockerfile  pyproject.toml  requirements.txt
data-entry/data_entry/: main.py
data-proccess/: Dockerfile  pyproject.toml
data-proccess/data_proccess/: main.py
data_entry/: Dockerfile  requirements.txt
data_entry/app/: main.py
kafka-reader/: Dockerfile  pyproject.toml
kafka-reader/kafka_reader/: main.py
results-view/: Dockerfile  pyproject.toml
results-view/results_view/: main.py
