[tool.poetry]
name = "data-proccess"
version = "0.1.0"
description = ""
authors = ["Shelly Ben Dor <shelly.bendor@biocatch.com>"]
packages = [{include = "data_proccess"}]

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "^0.20.0"
aio-pika = "^9.0.4"
async-retrying = "^0.2.2"
redis = "^4.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
