[tool.poetry]
name = "kafka-reader"
version = "0.1.0"
description = ""
authors = ["Shelly Ben Dor <shelly.bendor@biocatch.com>"]
packages = [{include = "kafka_reader"}]

[tool.poetry.dependencies]
python = "^3.8"
aiokafka = "^0.8.0"
asyncio = "^3.4.3"
async-retrying = "^0.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
