[tool.poetry]
name = "results-view"
version = "0.1.0"
description = ""
authors = ["Shelly Ben Dor <shelly.bendor@biocatch.com>"]
packages = [{include = "results_view"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.92.0"
uvicorn = "^0.20.0"
redis = "^4.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
